# MXDScript

./: .gitignore  README.md  pyproject.toml
assets/Rune/: rune_template_model.npz
config/: default.toml
docs/: architecture.md  legacy_open_package.md  questions_for_user.md  rune_protype_cleanup.md  yjs_api_notes.md
gui_web/: index.html  package-lock.json  package.json  vite.config.ts
gui_web/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: MXDScript.version  build_gui.ps1  build_open_package_gui.ps1  run_http_debug.py
skills/mxdscript-daily-automation/: SKILL.md
skills/mxdscript-pointer-precision/: SKILL.md
skills/mxdscript-pointer-precision/agents/: openai.yaml
src/mhscript_yjs/: __init__.py  cli.py
src/mhscript_yjs/characters/: __init__.py  actions.py  base.py  controller.py  lara.py  lynn.py  move_only.py  navigation.py  position.py
src/mhscript_yjs/core/: __init__.py  config.py
src/mhscript_yjs/drivers/: __init__.py  base.py  controlled.py  dry_run.py  keycodes.py  yjs.py
src/mhscript_yjs/gui/: __init__.py  api.py  http_server.py  open_package_gui.py  web_app.py
src/mhscript_yjs/runtime/: __init__.py  app_paths.py  (+10 more)
tests/: test_character_movement.py  test_character_navigation.py  test_config.py  test_controlled_device.py  test_coordinate_mover.py  test_daily_script.py  test_gui_api.py  test_gui_http_server.py  test_keycodes.py  test_leveling_script.py  test_open_package.py  test_rune_capture.py  test_rune_debug.py  test_rune_solver.py  test_rune_train.py  test_script_manager.py  test_shortcuts.py  test_vision_matcher.py  test_yjs.py
(+22 files in other folders)
